[gd_scene load_steps=4 format=2]

[ext_resource path="res://AAI Case/screens/top_screen_stuff/components/AAI_Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://AAI Case/screens/top_screen_stuff/components/AAIBackground.gd" type="Script" id=2]
[ext_resource path="res://AAI Case/screens/top_screen_stuff/Top Screen.gd" type="Script" id=3]

[node name="TopLevelControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -192.0
rect_min_size = Vector2( 256, 192 )
script = ExtResource( 3 )

[node name="Dialog" type="CanvasLayer" parent="."]
layer = 4

[node name="AAIDialogBox" parent="Dialog" instance=ExtResource( 1 )]
margin_right = 256.0
margin_bottom = 192.0

[node name="MiniCharacters" type="CanvasLayer" parent="."]
layer = 2

[node name="Background" type="CanvasLayer" parent="."]

[node name="BackgroundImage" type="TextureRect" parent="Background"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
